[gd_scene load_steps=3 format=2]

[ext_resource path="res://Admurin's Blocky Life/mcblocks2.5.png" type="Texture" id=1]
[ext_resource path="res://block.gd" type="Script" id=2]

[node name="block" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 18
vframes = 36
frame = 15

[node name="up" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="up"]
polygon = PoolVector2Array( 0, -1, -10, -6, -10, -7, 0, -11, 10, -7, 10, -6 )

[node name="left" type="Area2D" parent="."]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="left"]
polygon = PoolVector2Array( -11, -5, -1, 0, -1, 11, -11, 6 )

[node name="right" type="Area2D" parent="."]

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="right"]
polygon = PoolVector2Array( 1, 0, 11, -5, 11, 6, 1, 11 )

[connection signal="input_event" from="up" to="." method="_on_up_input_event"]
[connection signal="mouse_entered" from="up" to="." method="_on_up_mouse_entered"]
[connection signal="mouse_exited" from="up" to="." method="_on_up_mouse_exited"]
[connection signal="input_event" from="left" to="." method="_on_left_input_event"]
[connection signal="mouse_entered" from="left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="left" to="." method="_on_left_mouse_exited"]
[connection signal="input_event" from="right" to="." method="_on_right_input_event"]
[connection signal="mouse_entered" from="right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="right" to="." method="_on_right_mouse_exited"]
